# Reinforcement-Learning-Final-Project

./: .gitignore  FINAL_DEFENSE_QA.md  FINAL_PRESENTATION_OUTLINE.md  FINAL_REPORT.md  FINAL_RESULTS_SUMMARY.md  FINAL_SLIDES.md  README.md  pyproject.toml
data/: .gitignore
docs/: API_EXPERIMENTS.md  CODEX_REVIEW_SUMMARY.md  COST_MODEL.md  DOWNSTREAM_QA_GAP_TABLE.md  EXPERIMENT_DASHBOARD.md  FINAL_REPRODUCTION.md  POSTER_CLAIM_AUDIT.md  PROJECT_GAP_STATUS.md  READER_EXTENSION.md  RL_FRAMING.md  VALIDATION_PROTOCOL.md
poster/: beamercolorthemenott.sty  beamerthemegemini.sty  poster.bib  poster.tex
project-page/: index.html
scripts/: download_missing_raw_data.py  export_qualitative_examples.py  run_api_preflight.py  run_artifact_index.py  run_bandit_baselines.py  run_bandit_replay_diagnostics.py  run_budget_curve.py  run_checkpoint_manifest.py  run_complexity_diagnostics.py  run_confidence_gate_sweep.py  run_constrained_policy_bootstrap.py  run_constrained_policy_sweep.py  run_cost_frontier_summary.py  run_cross_dataset_transfer.py  run_data_preflight.py  run_dense_hotpot.py  run_embedding_preflight.py  run_evidence_consistency.py  run_experiment_dashboard.py  run_feature_ablation.py  run_feature_effects.py  run_final_claims_matrix.py  run_final_paper_assets.py  run_final_smoke.py  run_fqi_diagnostics.py  run_gemini_baseline.py  run_gemini_reader_eval.py  run_hotpot_ablation.py  run_hotpot_toy.py  run_llm_retrieval_policy_hotpot.py  run_markdown_consistency.py  run_multistep_hotpot.py  run_nq_toy.py  run_ope_diagnostics.py  run_ope_stability.py  (+23 more)
tests/: test_core.py  (+52 more)
(+382 files in other folders)
