[project]
name = "selective-rag-rl"
version = "0.1.0"
description = "Toy contextual-bandit experiments for selective query rewriting in RAG."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-auth>=2.53.0",
    "google-genai>=2.6.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/selective_rag_rl"]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
